welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: ';' expected but 'return' found.
    } return b
      ^